--- a/week2/solent-room-finder-week-2/.vscode/settings.json
+++ b/week2/solent-room-finder-week-2/.vscode/settings.json
@@ -4,5 +4,6 @@
     "source.fixAll.format": true
   },
   "eslint.validate": ["javascript"],
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true
 }
