Added TSC & Prettier

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,11 @@ jobs:
         working-directory: week3/solent-room-finder-week-3
         run: npm run lint
         continue-on-error: true
+      - name: Run TSC
+        working-directory: week3/solent-room-finder-week-3
+        run: npm run types
+        continue-on-error: true
+      - name: Run Prettier
+        working-directory: week3/solent-room-finder-week-3
+        run: npm run prettier
+        continue-on-error: true
