--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -14,11 +14,10 @@ jobs:
           npm install
           npm run build-storybook
       - name: Deploy
-        working-directory: week4/solent-room-finder-week-4
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: week-4-solutions # <---- you may need to update this. The branch the action should deploy to.
-          FOLDER: docs-build # The folder that the build-storybook script generates files.
+          BRANCH: main # <---- you may need to update this. The branch the action should deploy to.
+          FOLDER: week4/solent-room-finder-week-4/docs-build # The folder that the build-storybook script generates files.
           CLEAN: true # Automatically remove deleted files from the deploy branch
           TARGET_FOLDER: docs # The folder that we serve our Storybook files from
