--- a/week4/solent-room-finder-week-4/package.json
+++ b/week4/solent-room-finder-week-4/package.json
@@ -12,7 +12,7 @@
     "open": "netlify open",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -o docs-build"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
