--- a/room-tracker/week5/package.json
+++ b/room-tracker/week5/package.json
@@ -11,7 +11,6 @@
     "prettier": "prettier --write .",
     "types": "tsc",
     "open": "netlify open",
-    "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -o docs-build",
     "test-storybook": "test-storybook",
@@ -21,9 +20,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "axios": "^1.1.3",
+    "mongodb": "^4.11.0",
     "mongoose": "^6.6.5",
     "next": "12.2.3",
+    "next-auth": "^4.15.1",
     "rc-slider": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
