--- a/room-tracker/week5/package.json
+++ b/room-tracker/week5/package.json
@@ -19,6 +19,8 @@
     "cypress:run": "cypress run"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.5.0",
+    "@cloudinary/url-gen": "^1.8.6",
     "@heroicons/react": "^1.0.6",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "axios": "^1.1.3",
